# brightness-slider

./: CMakeLists.txt  CacheHandler.cpp  CacheHandler.h  DisplayInfo.cpp  DisplayInfo.h  LICENSE  MainWindow.cpp  MainWindow.h  main.cpp
